# web_9

./: authors.json  pyproject.toml
bs4/: authors_loader.py  config.ini  connect.py  main.py  models.py  quotes_loader.py
scrapy/: main.py
